# pykg-config

./: .gitignore  README.txt  setup.cfg  setup.py
pykg_config/: __init__.py  __main__.py  dependency.py  envVars2VarsRemap.py  errorprinter.py  exceptions.py  operators.py  options.py  package.py  packagespeclist.py  pcfile.py  pkgconfig.py  pkgsearcher.py  props.py  result.py  substitute.py  version.py
test/: test_compatibility.py  test_unittests.py
